Move all the logic we can from rest/ to forges/